--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
       text-decoration: underline;
     }
   </style>
+  <!-- Adding jQuery to the project -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
