--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
   </div>
 
   <script>
-  	// JavaScript here...
+  	function updateCounters() {
+        var todoCount = $(".todo").length;
+        var completedCount = $(".completed").length;
+
+        $("#total-count").html(todoCount);
+        $("#completed-count").html(completedCount);
+        $("#todo-count").html(todoCount - completedCount);
+    }
+
+updateCounters();
   </script>
 </body>
 </html>
