toggle done state function

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
         $("#todo-count").html(todoCount - completedCount);
     }
 
+    function toggleDone() {
+        var checkbox = this;
+
+        $(checkbox).parent().toggleClass("completed");
+    }
+
 updateCounters();
   </script>
 </body>
