Bind done toggle to checkbox onchange event

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         $("#completed-count").html(completedCount);
         $("#todo-count").html(todoCount - completedCount);
     }
+    updateCounters();
 
     function toggleDone() {
         var checkbox = this;
@@ -119,7 +120,10 @@
         $(checkbox).parent().toggleClass("completed");
     }
 
-updateCounters();
+    $(document).ready(function() {
+        $("input[type=checkbox]").on('change', toggleDone);
+    });
+
   </script>
 </body>
 </html>
