--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
       Todo: <span id="todo-count">1</span> •
       Done: <span id="completed-count">0</span> •
       Total: <span id="total-count">1</span>
+
+      <a href="#" id="clean-up">Clean up</a>
     </div>
   </div>
 
@@ -184,6 +186,13 @@ function nextTodoId() {
   return $(".todo").length + 1;
 }
 
+function cleanUpDoneTodos(event) {
+  event.preventDefault();
+  $.when($(".completed").remove())
+    .then(updateCounters);
+}
+
+$("#clean-up").on('click', cleanUpDoneTodos);
   </script>
 </body>
 </html>
