--- a/index.html
+++ b/index.html
@@ -106,32 +106,36 @@
   </div>
 
   <script>
-    $("#total-count").html($(".todo").length);
-    
-  	function updateCounters() {
+      
+    // update all todo counters  
+    function updateCounters() {
         var todoCount = $(".todo").length;
         var completedCount = $(".completed").length;
 
-        $("#total-count").html(todoCount);
+        $("#total-count").html(todoCount); // why "html" is necessary?
         $("#completed-count").html(completedCount);
         $("#todo-count").html(todoCount - completedCount);
     }
-    updateCounters();
 
+    // toggle completed stage
+    // done counter does not work properly!!!
     function toggleDone() {
         var checkbox = this;
 
         $(checkbox).parent().toggleClass("completed");
     }
 
+    // register event listener and move function call
     $(document).ready(function() {
         $("input[type=checkbox]").on('change', toggleDone);
+        updateCounters(); // function call
     });
 
+    // submit new todos
     $("form").on('submit', submitTodo);
 
     function submitTodo(event) {
-    // stop the form from doing the default action, submitting...
+        // stop the form from doing the default action, submitting...
         event.preventDefault();
 
         var title = $("#new-todo").val();
@@ -142,44 +146,45 @@
         updateCounters();
     }
 
-function createTodo(title) {
-  var checkboxId = "todo-" + nextTodoId();
+    function createTodo(title) {
+        var checkboxId = "todo-" + nextTodoId();
 
-  var listItem = $("<li></li>");
-  listItem.addClass("todo");
+        var listItem = $("<li></li>");
+        listItem.addClass("todo");
 
-  var checkbox = $('<input>');
-  checkbox.attr('type', 'checkbox');
-  checkbox.attr('id', checkboxId);
-  checkbox.val(1);
-  checkbox.on('change', toggleDone);
+        var checkbox = $('<input>');
+        checkbox.attr('type', 'checkbox');
+        checkbox.attr('id', checkboxId);
+        checkbox.val(1);
+        checkbox.on('change', toggleDone);
 
-  var space = document.createTextNode(" ");
+        var space = document.createTextNode(" ");
 
-  var label = $('<label></label>');
-  label.attr('for', checkboxId);
-  label.html(title);
+        var label = $('<label></label>');
+        label.attr('for', checkboxId);
+        label.html(title);
 
-  listItem.append(checkbox);
-  listItem.append(space);
-  listItem.append(label);
+        listItem.append(checkbox);
+        listItem.append(space);
+        listItem.append(label);
 
-  $("#todolist").append( listItem );
+        $("#todolist").append( listItem );
 
-  updateCounters();
-}
+        updateCounters();
+    }
 
-function nextTodoId() {
-  return $(".todo").length + 1;
-}
+    function nextTodoId() {
+        return $(".todo").length + 1;
+    }
 
-function cleanUpDoneTodos(event) {
-  event.preventDefault();
-  $.when($(".completed").remove())
-    .then(updateCounters);
-}
+    // clean up completed todos
+    function cleanUpDoneTodos(event) {
+        event.preventDefault();
+        $.when($(".completed").remove())
+            .then(updateCounters);
+    }
 
-$("#clean-up").on('click', cleanUpDoneTodos);
+    $("#clean-up").on('click', cleanUpDoneTodos);
   </script>
 </body>
 </html>
